Rebrand app to Illumidel and add Illumidel update support
Renamed the app from WLED to Illumidel throughout the project, updated app icons and logos, and replaced WLED-specific assets and strings. Introduced IllumidelRepoApi and IllumidelUpdateService for handling Illumidel-specific update flows, including authenticated GitHub API requests. Updated UI to reflect new branding, improved update dialogs, and added VersionViewModel for version data handling. Also set the app to use dark mode by default and updated error pages and documentation links to Illumidel.

--- a/wled/errorPage.fr.html
+++ b/wled/errorPage.fr.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div>
-            <img src="012_rip.png" alt="Dead LED character" />
+            <img src="illumidel_logo_dark.png" alt="Logo Illumidel" />
             <h1>L'appareil est indisponible</h1>
             <p>Assurez-vous qu'il est bien branché et connecté au réseau</p>
         </div>
