--- a/wled/errorPage.en.html
+++ b/wled/errorPage.en.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div>
-            <img src="012_rip.png" alt="Dead LED character" />
+            <img src="illumidel_logo_dark.png" alt="Illumidel Logo" />
             <h1>The device could not be reached</h1>
             <p>Make sure it is plugged in and connected to the network</p>
         </div>
